--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
-    <a href='javascript:(function(){var a,b,c;return a="dontCache",b=a+"="+(new Date).getTime(),c=document.location.search.substr(1),0===c.length?document.location.search=b:-1===c.indexOf(a)?document.location.search+="&"+b:(c=c.split("&").map(function(c){return function(c){return c.split("=")[0]!==a?c:b}}(this)),void(document.location.search=c.join("&")))}).call(this);SRC$'>View without cache</a>
+    <p>Drag this link to your bookmark bar to save the bookmarklet:</p>
+    <p><a href='javascript:(function(){var a,b,c;return a="dontCache",b=a+"="+(new Date).getTime(),c=document.location.search.substr(1),0===c.length?document.location.search=b:-1===c.indexOf(a)?document.location.search+="&"+b:(c=c.split("&").map(function(c){return function(c){return c.split("=")[0]!==a?c:b}}(this)),void(document.location.search=c.join("&")))}).call(this);SRC$'>View without cache</a></p>
+    <p>See <a href="github.com/benbalter/view-without-cache-bookmarklet">https://github.com/benbalter/view-without-cache-bookmarklet</a> for more information.</p>
   </body>
 </html>
