--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
-    <a href='javascript:$SRC$'>View without cache</a>
+    <p>Drag this link to your bookmark bar to save the bookmarklet:</p>
+    <p><a href='javascript:$SRC$'>View without cache</a></p>
+    <p>See <a href="github.com/benbalter/view-without-cache-bookmarklet">https://github.com/benbalter/view-without-cache-bookmarklet</a> for more information.</p>
   </body>
 </html>
