--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <p>Drag this link to your bookmark bar to save the bookmarklet:</p>
-    <p><a href='javascript:$SRC$'>View without cache</a></p>
+    <p><a href='javascript:_SRC_'>View without cache</a></p>
     <p>See <a href="https://github.com/benbalter/view-without-cache-bookmarklet">github.com/benbalter/view-without-cache-bookmarklet</a> for more information.</p>
   </body>
 </html>
